[package]
name = "mini-hackathon"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mini_hackathon"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.29.0"
mpl-token-metadata = { version = "4.0", features = ["no-entrypoint"] }

